--- a/174_Dungeon_Game.ipynb
+++ b/174_Dungeon_Game.ipynb
@@ -141,6 +141,74 @@
     "dungeon = [[-2,-3,3],[-5,-10,1],[10,30,-5]]\n",
     "calculateMinimumHP(dungeon)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 二版\n",
+    "\n",
+    "其實不需要儲存每一個位置的資訊, 每次只需儲存前一 row 之結果"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculateMinimumHP(dungeon):\n",
+    "    process = []\n",
+    "    for l in dungeon[-1::-1]:\n",
+    "        tmp = []\n",
+    "        for x in l[-1::-1]:\n",
+    "            if not process and not tmp:\n",
+    "                # 最後一格\n",
+    "                tmp.append(max(1 - x, 1))\n",
+    "\n",
+    "            elif not tmp:\n",
+    "                # 沒有[i, j + 1]\n",
+    "                tmp.append(max(1,process[0] - x))\n",
+    "\n",
+    "            elif not process:\n",
+    "                # 沒有 [i + 1, j]:\n",
+    "                tmp.append(max(1,tmp[-1] - x))\n",
+    "\n",
+    "            else:\n",
+    "                # 有 [i + 1, j] 也有 [i, j + 1]\n",
+    "                tmp.append(max(1, min(tmp[-1] - x, process[len(tmp)] - x)))\n",
+    "\n",
+    "        process = tmp\n",
+    "    return process[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dungeon = [[-2,-3,3],[-5,-10,1],[10,30,-5]]\n",
+    "calculateMinimumHP(dungeon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
