--- a/174_Dungeon_Game.ipynb
+++ b/174_Dungeon_Game.ipynb
@@ -204,6 +204,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 三版\n",
+    "修改修改 process 之方式, 因此不需要 tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculateMinimumHP(dungeon):\n",
+    "    process = []\n",
+    "    for l in dungeon[-1::-1]:\n",
+    "        for j, x in enumerate(l[-1::-1]):\n",
+    "            if not process:\n",
+    "                # 最後一格\n",
+    "                process.append(max(1 - x, 1))\n",
+    "\n",
+    "            elif j == 0:\n",
+    "                # 沒有[i, j + 1]\n",
+    "                process[j] = max(1,process[j] - x)\n",
+    "\n",
+    "            elif len(process) < len(dungeon[0]):\n",
+    "                # 沒有 [i + 1, j]:\n",
+    "                process.append(max(1,process[j -1] - x))\n",
+    "\n",
+    "            else:\n",
+    "                # 有 [i + 1, j] 也有 [i, j + 1]\n",
+    "                process[j] = max(1, min(process[j - 1], process[j]) - x)\n",
+    "    return process[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dungeon = [[-2,-3,3],[-5,-10,1],[10,30,-5]]\n",
+    "calculateMinimumHP(dungeon)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
