--- a/Solution/174_Dungeon_Game.ipynb
+++ b/Solution/174_Dungeon_Game.ipynb
@@ -86,129 +86,8 @@
    "source": [
     "# 實作\n",
     "\n",
-    "先建立一個上下左右顛倒的順序的處理矩陣, 每一個都是進入對應格之前的最低血量需求\n",
+    "建立一個左右顛倒的順序的處理陣列, 由最後一 row 開始計算進入對應格之最低血量\n",
     "然後逐步往前一格推, 最後就可以得到初始之最低血量需求"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculateMinimumHP(dungeon):\n",
-    "    process = []\n",
-    "    for l in dungeon[-1::-1]:\n",
-    "        tmp = []\n",
-    "        for x in l[-1::-1]:\n",
-    "            if not process and not tmp:\n",
-    "                # 最後一格\n",
-    "                tmp.append(max(1 - x, 1))\n",
-    "\n",
-    "            elif not tmp:\n",
-    "                # 沒有[i, j + 1]\n",
-    "                tmp.append(max(1,process[-1][0] - x))\n",
-    "\n",
-    "            elif not process:\n",
-    "                # 沒有 [i + 1, j]:\n",
-    "                tmp.append(max(1,tmp[-1] - x))\n",
-    "\n",
-    "            else:\n",
-    "                # 有 [i + 1, j] 也有 [i, j + 1]\n",
-    "                tmp.append(max(1, min(tmp[-1] - x, process[-1][len(tmp)] - x)))\n",
-    "\n",
-    "        process.append(tmp)\n",
-    "    return process[-1][-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dungeon = [[-2,-3,3],[-5,-10,1],[10,30,-5]]\n",
-    "calculateMinimumHP(dungeon)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 二版\n",
-    "\n",
-    "其實不需要儲存每一個位置的資訊, 每次只需儲存前一 row 之結果"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculateMinimumHP(dungeon):\n",
-    "    process = []\n",
-    "    for l in dungeon[-1::-1]:\n",
-    "        tmp = []\n",
-    "        for x in l[-1::-1]:\n",
-    "            if not process and not tmp:\n",
-    "                # 最後一格\n",
-    "                tmp.append(max(1 - x, 1))\n",
-    "\n",
-    "            elif not tmp:\n",
-    "                # 沒有[i, j + 1]\n",
-    "                tmp.append(max(1,process[0] - x))\n",
-    "\n",
-    "            elif not process:\n",
-    "                # 沒有 [i + 1, j]:\n",
-    "                tmp.append(max(1,tmp[-1] - x))\n",
-    "\n",
-    "            else:\n",
-    "                # 有 [i + 1, j] 也有 [i, j + 1]\n",
-    "                tmp.append(max(1, min(tmp[-1] - x, process[len(tmp)] - x)))\n",
-    "\n",
-    "        process = tmp\n",
-    "    return process[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dungeon = [[-2,-3,3],[-5,-10,1],[10,30,-5]]\n",
-    "calculateMinimumHP(dungeon)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 三版\n",
-    "修改修改 process 之方式, 因此不需要 tmp"
    ]
   },
   {
@@ -259,13 +138,6 @@
     "dungeon = [[-2,-3,3],[-5,-10,1],[10,30,-5]]\n",
     "calculateMinimumHP(dungeon)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
