加上輸入輸出說明

--- a/Solution/174_Dungeon_Game.ipynb
+++ b/Solution/174_Dungeon_Game.ipynb
@@ -84,6 +84,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# input:\n",
+    "dungeon: List of List of int\n",
+    "\n",
+    "# output:\n",
+    "int: 最少所需血量"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 實作\n",
     "\n",
     "建立一個左右顛倒的順序的處理陣列, 由最後一 row 開始計算進入對應格之最低血量\n",
