--- a/Problems/1_Two_Sum.ipynb
+++ b/Problems/1_Two_Sum.ipynb
@@ -38,11 +38,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "input:\n",
+    "# input:\n",
     "nums: List of int\n",
     "target: int\n",
     "\n",
-    "output:\n",
+    "# output:\n",
     "List of int: 兩個相加等於目標值的數的位置"
    ]
   },
