remove 2nd approach

--- a/Problems/78_Subsets.ipynb
+++ b/Problems/78_Subsets.ipynb
@@ -40,9 +40,7 @@
    "source": [
     "# 想法:\n",
     "\n",
-    "有兩種做法\n",
-    "\n",
-    "1. 每次重複一次原有的集合, 但是新增的那一半都多放一個東西\n",
+    "每次重複一次原有的集合, 但是新增的那一半都多放一個東西\n",
     "以 example 1 為例:\n",
     "\n",
     "一開始是\n",
@@ -65,22 +63,7 @@
     "`[[], [1], [2], [1, 2], [], [1], [2], [1, 2]]`\n",
     "\n",
     "最後就變成\n",
-    "`[[], [1], [2], [1, 2], [3], [1, 3], [2, 3], [1, 2, 3]]`\n",
-    "\n",
-    "2. 使用二進位: 造出 2 ** len(nums) 個空集合, 然後依編號放入對應元素, 同樣以 example 1 為例:\n",
-    "\n",
-    "> * 第 `0` 個集合是 `000` 所以保持 `[]`\n",
-    "> * 第 `1` 個集合是 `001` 所以放入第 `0` 個元素 `[1]`\n",
-    "> * 第 `2` 個集合是 `010` 所以放入 `[2]`\n",
-    "> * 第 `3` 個集合是 `011` 所以放入 `[1, 2]`\n",
-    "> * 第 `4` 個集合是 `100` 所以放入 `[3]`\n",
-    "> * 第 `5` 個集合是 `101` 所以放入 `[1, 3]`\n",
-    "> * 第 `6` 個集合是 `110` 所以放入 `[2, 3]`\n",
-    "> * 第 `7` 個集合是 `111` 所以放入 `[1, 2, 3]`\n",
-    "\n",
-    "結果就是\n",
-    "\n",
-    "`[[], [1],, [2], [1, 2], [3], [1, 3], [2, 3], [1, 2, 3]]`"
+    "`[[], [1], [2], [1, 2], [3], [1, 3], [2, 3], [1, 2, 3]]`"
    ]
   },
   {
@@ -107,8 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.\n",
-    "> 1. 使用 recursion"
+    "1. 使用 recursion"
    ]
   },
   {
@@ -153,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 2. 不使用 recursion"
+    "2. 不使用 recursion"
    ]
   },
   {
@@ -192,60 +174,6 @@
     "\n",
     "subsets(nums)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def subsets(nums):\n",
-    "    ret = []\n",
-    "    for i in range(2 ** len(nums)):\n",
-    "        n = bin(i)[2:][-1::-1]\n",
-    "        tmp = []\n",
-    "        for j in range(len(n)):\n",
-    "            if n[j] == \"1\":\n",
-    "                tmp.append(nums[j])\n",
-    "        ret.append(tmp)\n",
-    "    return ret"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[], [1], [2], [1, 2], [3], [1, 3], [2, 3], [1, 2, 3]]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nums = [1,2,3]\n",
-    "\n",
-    "subsets(nums)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
